--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="px-1 mt-5">
                     <div class="rounded-full bg-white border-gray-400 border w-4 h-4 absolute lg:left-1/2 mt-2 -translate-x-2/3 lg:-translate-x-1/2"></div>
                     <div class="mx-5 flex flex-col gap-2.5">
-                        <a href="./maze3d.apk" download="download">
+                        <a href="https://drive.google.com/file/d/1aBU1qpb0aDo3guZmyBjT8PGfndNNU1Sp/view?usp=sharing" target="_blank">
                             <div class="flex">
                                 <div class="text-gray-900 text-2xl font-semibold group">
                                     Maze3D
@@ -207,7 +207,7 @@
                 <div class="px-1 mt-5">
                     <div class="rounded-full bg-white border-gray-400 border w-4 h-4 absolute lg:left-1/2 mt-2 -translate-x-2/3 lg:-translate-x-1/2"></div>
                     <div class="mx-5 flex flex-col lg:items-end gap-2.5">
-                        <a href="./slidecube.apk" download="download">
+                        <a href="https://drive.google.com/file/d/1JduTmlzkUQEdaIxDKGlapa4vh6g75RHB/view?usp=sharing" target="_blank">
                             <div class="flex">
                                 <div class="text-gray-900 text-2xl font-semibold group">
                                     Slide Cube
@@ -229,7 +229,7 @@
                 <div class="px-1 mt-5">
                     <div class="rounded-full bg-white border-gray-400 border w-4 h-4 absolute lg:left-1/2 mt-2 -translate-x-2/3 lg:-translate-x-1/2"></div>
                     <div class="mx-5 flex flex-col gap-2.5">
-                        <a href="./flappyshape.apk" download="download">
+                        <a href="https://drive.google.com/file/d/1dsAnYz0VgzVbT7hcHrnRMh38V1oA9IWU/view?usp=sharing" target="_blank">
                             <div class="flex">
                                 <div class="text-gray-900 text-2xl font-semibold group">
                                     Flappy Shape
