--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <section id="about" class="xl:mx-64 lg:mx-14 mx-10 flex flex-col-reverse lg:flex-row lg:gap-0 gap-10 justify-between items-center text-gray-900 lg:my-20 my-10">
+    <section class="xl:mx-64 lg:mx-14 mx-10 flex flex-col-reverse lg:flex-row lg:gap-0 gap-10 justify-between items-center text-gray-900 lg:my-20 my-10">
         <div class="mx-auo">
             <p class="text-lg text-gray-800">Hey there i am</p>
             <p class="text-5xl font-semibold">Harsh Choudhary</p>
@@ -97,7 +97,8 @@
 
     <hr class="xl:mx-64 lg:mx-14 mx-10 my-24">
 
-    <section id="projects" class="xl:mx-64 lg:mx-14 mx-10 mt-12 text-center">
+    <a class="invisible block h-20 -mt-20" id="about"></a>
+    <section class="xl:mx-64 lg:mx-14 mx-10 mt-12 text-center">
         <h1 class="font-semibold text-3xl mb-5">About Me</h1>
         <p class="text-gray-500 w-3/ 4">
             I am Harsh Choudhary, a web and game developer with 4 years of experience in web development and 2 years in
@@ -109,6 +110,7 @@
 
     <hr class="xl:mx-64 lg:mx-14 mx-10 my-24">
 
+    <a class="invisible block h-20 -mt-20" id="projects"></a>
     <div class="xl:mx-64 lg:mx-14 mx-10">
         <div class="lg:flex">
             <div class="flex-1 flex justify-center">
@@ -273,6 +275,7 @@
         </div>
     </div>
 
+    <a class="invisible block h-20 -mt-20" id="contact"></a>
     <section id="contact" class="mx-auto px-5 py-24 bg-gray-50 text-gray-500">
         <div class="mb-12 flex w-full flex-col text-center">
             <h1 class="mb-4 text-gray-900 text-2xl font-semibold sm:text-3xl">Have an Project in Mind?</h1>
