--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         </p>
                     </div>
                 </div>                
-                
+                </div>
             </div>
     </div>
 
