--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="mx-auo">
             <p class="text-lg text-gray-800">Hey there i am</p>
             <p class="text-5xl font-semibold">Harsh Choudhary</p>
-            <p class="text-3xl text-gray-800 mt-5">Game & Web Developer</p>
+            <p class="text-3xl text-gray-800 mt-5">Web Developer & Freelancer</p>
             <div class="flex gap-5 my-5 mb-10">
                 <a href="https://www.instagram.com/harsh.choudhary344/" target="_blank"><svg class="text-gray-500 hover:text-gray-600 duration-300 w-8 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1024 1024"><path fill="currentColor" d="M512 306.9c-113.5 0-205.1 91.6-205.1 205.1S398.5 717.1 512 717.1S717.1 625.5 717.1 512S625.5 306.9 512 306.9m0 338.4c-73.4 0-133.3-59.9-133.3-133.3S438.6 378.7 512 378.7S645.3 438.6 645.3 512S585.4 645.3 512 645.3m213.5-394.6c-26.5 0-47.9 21.4-47.9 47.9s21.4 47.9 47.9 47.9s47.9-21.3 47.9-47.9a47.84 47.84 0 0 0-47.9-47.9M911.8 512c0-55.2.5-109.9-2.6-165c-3.1-64-17.7-120.8-64.5-167.6c-46.9-46.9-103.6-61.4-167.6-64.5c-55.2-3.1-109.9-2.6-165-2.6c-55.2 0-109.9-.5-165 2.6c-64 3.1-120.8 17.7-167.6 64.5C132.6 226.3 118.1 283 115 347c-3.1 55.2-2.6 109.9-2.6 165s-.5 109.9 2.6 165c3.1 64 17.7 120.8 64.5 167.6c46.9 46.9 103.6 61.4 167.6 64.5c55.2 3.1 109.9 2.6 165 2.6c55.2 0 109.9.5 165-2.6c64-3.1 120.8-17.7 167.6-64.5c46.9-46.9 61.4-103.6 64.5-167.6c3.2-55.1 2.6-109.8 2.6-165m-88 235.8c-7.3 18.2-16.1 31.8-30.2 45.8c-14.1 14.1-27.6 22.9-45.8 30.2C695.2 844.7 570.3 840 512 840s-183.3 4.7-235.9-16.1c-18.2-7.3-31.8-16.1-45.8-30.2c-14.1-14.1-22.9-27.6-30.2-45.8C179.3 695.2 184 570.3 184 512s-4.7-183.3 16.1-235.9c7.3-18.2 16.1-31.8 30.2-45.8s27.6-22.9 45.8-30.2C328.7 179.3 453.7 184 512 184s183.3-4.7 235.9 16.1c18.2 7.3 31.8 16.1 45.8 30.2c14.1 14.1 22.9 27.6 30.2 45.8C844.7 328.7 840 453.7 840 512s4.7 183.2-16.2 235.8"/></svg></a>
                 <a href="https://x.com/harsh_344" target="_blank"><svg class="text-gray-500 hover:text-gray-600 duration-300 w-8 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path fill="currentColor" d="M18.205 2.25h3.308l-7.227 8.26l8.502 11.24H16.13l-5.214-6.817L4.95 21.75H1.64l7.73-8.835L1.215 2.25H8.04l4.713 6.231zm-1.161 17.52h1.833L7.045 4.126H5.078z"/></svg></a>
@@ -96,11 +96,10 @@
     <a class="invisible block h-20 -mt-20" id="about"></a>
     <section class="xl:mx-64 lg:mx-14 mx-10 mt-12 text-center">
         <h1 class="font-semibold text-3xl mb-5">About Me</h1>
-        <p class="text-gray-500">
-            I am Harsh Choudhary, a web and game developer with 4 years of experience in web development and 2 years in
-            game development. I specialize in modern web technologies and have been freelancing for the past 2 years,
-            successfully delivering projects for a variety of clients. My technical expertise, combined with my freelancing
-            experience, allows me to adapt to diverse challenges.
+        <p class="text-gray-500 mx-2">
+            I am Harsh Choudhary, a web developer with 4 years of experience in modern web technologies and 2 years of experience in game development. 
+            Currently pursuing a B.Tech in Electronics and Communication, I have also gained knowledge of Arduino and other technical skills. 
+            For the past 3 years, I have been freelancing, delivering diverse projects for various clients. My technical expertise, combined with my academic background, enables me to adapt to different challenges and deliver quality results.
         </p>
     </section>
 
@@ -138,7 +137,7 @@
                 <p class="text-gray-600">Fiverr Rating</p>
             </div>
             <div class="py-2">
-                <p class="text-2xl font-semibold">2 Years</p>
+                <p class="text-2xl font-semibold">3 Years</p>
                 <p class="text-gray-600">Experience</p>
             </div>
             <div class="py-2">
@@ -175,7 +174,7 @@
                         <p class="text-gray-500 text-lg">Web Platform</p>
                         <p class="text-gray-500 font-semibold border border-gray-300 w-fit px-5 py-2 rounded-full hover:shadow duration-300">2023-2024</p>
                         <p class="text-gray-500 xl:w-[30rem] lg:text-right">
-                            Developed a platform using Vue.js, Node.js, and MySQL where developers can buy and sell code, scripts, and themes. 
+                            Developed a platform using Vue.js, Node.js, Express.js, and MySQL where developers can buy and sell code, scripts, and themes. 
                             Focused on SEO optimization and minimalistic UI/UX.
                         </p>
                     </div>
