--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
     <hr class="xl:mx-64 lg:mx-14 mx-10 my-24">
 
     <a class="invisible block h-20 -mt-20" id="about"></a>
-    <section class="xl:mx-64 lg:mx-14 mx-10 mt-12 text-center">
+    <section class="2xl:mx-72 xl:mx-64 lg:mx-14 mx-10 mt-12 text-center">
         <h1 class="font-semibold text-3xl mb-5">About Me</h1>
-        <p class="text-gray-500 mx-2">
+        <p class="text-gray-500">
             I am Harsh Choudhary, a web developer with 4 years of experience in modern web technologies and 2 years of experience in game development. 
             Currently pursuing a B.Tech in Electronics and Communication, I have also gained knowledge of Arduino and other technical skills. 
             For the past 3 years, I have been freelancing, delivering diverse projects for various clients. My technical expertise, combined with my academic background, enables me to adapt to different challenges and deliver quality results.
