--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             </div>
                         </a>
                         <p class="text-gray-500 text-lg">AI SaaS</p>
-                        <p class="text-gray-500 font-semibold border border-gray-300 w-fit px-5 py-2 rounded-full hover:shadow duration-300">2025-2025</p>
+                        <p class="text-gray-500 font-semibold border border-gray-300 w-fit px-5 py-2 rounded-full hover:shadow duration-300">Jan 2025</p>
                         <p class="text-gray-500 xl:w-[30rem] lg:text-right">
                             Developed an AI-powered image upscaling platform using Nuxt.js, Vue 3, and Node.js. Implemented a credit-based system, PayPal/UPI payments, and a seamless user experience.
                         </p>
@@ -199,7 +199,7 @@
                             </div>
                         </a>
                         <p class="text-gray-500 text-lg">AI SaaS</p>
-                        <p class="text-gray-500 font-semibold border border-gray-300 w-fit px-5 py-2 rounded-full hover:shadow duration-300">2021-2022</p>
+                        <p class="text-gray-500 font-semibold border border-gray-300 w-fit px-5 py-2 rounded-full hover:shadow duration-300">Nov 2024</p>
                         <p class="text-gray-500 xl:w-[30rem] lg:text-left">
                             Developed an AI-powered TailwindCSS code generator using Node.js, Gemini AI API, and jQuery. Enables developers to generate TailwindCSS code from text prompts instantly.
                         </p>
